Gradle build refactoring, java9 stuff removed for now
git-svn-id: svn://svn.hafro.is/jminor/trunk@8710 51816742-9f83-410d-85ed-e7bcf7042953